@@ -86,6 +86,20 @@
 					<finalName>uber-${project.artifactId}-${project.version}</finalName>
 				</configuration>
 			</plugin>
+			
+			<plugin>
+  			  <groupId>org.apache.maven.plugins</groupId>
+   				 <artifactId>maven-surefire-plugin</artifactId>
+   				 <configuration>
+    			    <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED
+      			      --add-opens=java.base/java.math=ALL-UNNAMED
+      			      --add-opens=java.base/java.util=ALL-UNNAMED
+      			      --add-opens=java.base/java.util.concurrent=ALL-UNNAMED
+       			     --add-opens=java.base/java.net=ALL-UNNAMED
+      			      --add-opens=java.base/java.text=ALL-UNNAMED
+        			    --add-opens=java.sql/java.sql=ALL-UNNAMED</argLine>
+ 			   </configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
